--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "jsonresume-theme-stackoverflow",
+  "name": "@4lch4/jsonresume-theme-stackoverflow",
   "version": "2.0.2",
   "description": "Stack Overflow theme for JSON Resume",
-  "author": "Francesco Esposito",
+  "author": {
+    "name": "4lch4",
+    "email": "hey@4lch4.email",
+    "url": "https://4lch4.com"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/francescoes/jsonresume-theme-stackoverflow"
+    "url": "https://github.com/4lch4/jsonresume-theme-stackoverflow"
   },
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "handlebars": "^4.7.7",
-    "markdown-it": "^13.0.1",
-    "moment": "^2.29.2"
+    "handlebars": "^4.7.8",
+    "markdown-it": "^13.0.2",
+    "moment": "^2.30.1"
   }
 }
