--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "@4lch4/jsonresume-theme-stackoverflow",
   "version": "2.0.2",
   "description": "Stack Overflow theme for JSON Resume",
-  "author": {
-    "name": "4lch4",
-    "email": "hey@4lch4.email",
-    "url": "https://4lch4.com"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/4lch4/jsonresume-theme-stackoverflow"
   },
   "license": "MIT",
+  "author": {
+    "name": "4lch4",
+    "email": "hey@4lch4.email",
+    "url": "https://4lch4.com"
+  },
   "main": "index.js",
   "dependencies": {
     "handlebars": "^4.7.8",
     "markdown-it": "^13.0.2",
     "moment": "^2.30.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-packagejson": "^2.5.0"
   }
 }
