--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.5.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
