--- a/package.json
+++ b/package.json
@@ -39,11 +39,16 @@
     "start": "bun run ./src/index.ts"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
+    "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "markdown-it": "^13.0.2",
     "moment": "^2.30.1"
   },
   "devDependencies": {
+    "@types/bun": "^1.0.12",
+    "@types/fs-extra": "^11.0.4",
+    "@types/markdown-it": "^14.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.5.0"
